# tria

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .env.production.template  .env.staging.example  .env.unified.example  .gitignore  100_PERCENT_PRODUCTION_READINESS_PLAN.md  AUDIT_FINDINGS_SUMMARY.md  CACHE_FIX_FINAL_REPORT.md  CACHE_INTEGRATION_SUCCESS.md  CHATBOT_INTEGRATION_COMPLETE.md  CLAUDE.md  COMPREHENSIVE_INVESTIGATION_FINDINGS.md  COMPREHENSIVE_PRODUCTION_GUIDE.md  CONVERSATION_MEMORY_IMPLEMENTATION_COMPLETE.md  CURRENT_STATUS.md  CUSTOMER_FRIENDLY_ERRORS.md  DATABASE_COLUMN_FIX.md  DATABASE_CONFIGURATION.md  DEPLOYMENT_AGENT.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ECS.md  DEPLOY_FIXES_NOW.md  DEPLOY_NOW.md  DEVELOPMENT_STATUS_REPORT.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  Dockerfile  FINAL_CERTIFICATION.md  FINAL_PRODUCTION_READINESS_ASSESSMENT.md  GITHUB_DEPLOYMENT_COMPLETE.md  HONEST_CRITIQUE_OF_TESTING.md  HONEST_TEST_RESULTS.md  IMMEDIATE_ACTIONS.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  (+35 more)
doc/: CHATBOT_ARCHITECTURE_PROPOSAL.md  EXISTING_A2A_FRAMEWORK_ANALYSIS.md
docs/: 01-platform-overview.md  02-system-architecture.md  03-technology-stack.md  04-development-standards.md  05-data-models.md  06-naming-conventions.md  07-directory-structure.md  CACHE_HIT_RATE_PROJECTIONS.md  DATA_DICTIONARY.md  DEPLOYMENT.md  DEPLOYMENT_ANALYSIS.md  DIGITAL_OCEAN_SIZING.md  DIRECTORY_CLEANUP_SUMMARY.md  LOAD_TESTING_GUIDE.md  OPERATIONAL_RUNBOOK.md  README.md  (+12 more)
(+341 files in other folders)
